Fix project details image spacing

--- a/pages/projet-style.css
+++ b/pages/projet-style.css
@@ -180,6 +180,7 @@
 }
 
 #projet-details-images img {
+  display: block;
   height: 100%;
   width: auto;
 }
